--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,6 @@ project(ne591_008)
 set(CMAKE_DISABLE_SOURCE_CHANGES ON)
 set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
 
-## Floating point options https://gcc.gnu.org/wiki/FloatingPointMath
-set(PROJECT_CXX_FLAGS_FLOAT "-frounding-math -fsignaling-nans")
-
 ####################### Options ################### {{{
 option(BUILD_TESTS "Build the tests" ON)  # Influences CTest.
 option(OPTIMIZE_FOR_NATIVE "Build with -march=native" ON)
@@ -28,7 +25,7 @@ include_directories("${PROJECT_SOURCE_DIR}/src")
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)  # Needed for Clang Tooling.
 
 # Default to C++17.
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
@@ -41,55 +38,22 @@ endfunction()
 
 add_definitions(-DPROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR}")  # Needed to print file paths.
 
-# Proactively disable warnings in case Wall/Wextra are enabled outside.
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-sign-compare -Wno-missing-field-initializers")
 
-# Strict debug flags for build targets (opt-in, must subscribe to quality checks explicitly).
-# NOTE: This is a list unlike CMAKE_CXX_FLAGS.
-set(PROJECT_CXX_FLAGS_DEBUG -Wall -Wextra -Werror -Wnon-virtual-dtor -Wold-style-cast)
-
-if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-new-ttp-matching")  # TODO: Boost ICL failure.
-    CHECK_COMPILER_VERSION("7.1")
-    list(APPEND PROJECT_CXX_FLAGS_DEBUG
-            -Wredundant-decls -Wcast-align -Wlogical-op -Wvla -Wuseless-cast -Wunreachable-code
-            -Wshadow -Wpedantic -Wmissing-declarations
-            -Wimplicit-fallthrough=0  # TODO: Consider explicit fallthrough.
-    )
-
-elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-    CHECK_COMPILER_VERSION("5.0")
-    list(APPEND PROJECT_CXX_FLAGS_DEBUG -Wno-missing-braces -Wshadow -Wunused-exception-parameter)
-
-elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
-    CHECK_COMPILER_VERSION("9.0")
-    list(APPEND PROJECT_CXX_FLAGS_DEBUG -Wno-string-plus-int -Wno-sign-compare -Wno-missing-field-initializers)
-
-elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
-    CHECK_COMPILER_VERSION("18.0.1")
-    # TODO: Warning with overload of private override.
-    list(APPEND PROJECT_CXX_FLAGS_DEBUG -diag-disable=1125)
-endif()
-
-if(WIN32)
-    list(APPEND PROJECT_CXX_FLAGS_DEBUG -Wno-error)
-endif()
-
-if(WITH_COVERAGE)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage")
-endif()
-
-if(WITH_PROFILE)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg -fno-omit-frame-pointer")
-endif()
-
+####################### Project Level CXX flags ################### {{{
+## Floating point options https://gcc.gnu.org/wiki/FloatingPointMath
+#set(PROJECT_CXX_FLAGS -frounding-math -fsignaling-nans)
+set(PROJECT_CXX_FLAGS_DEBUG -Wall -Wextra -Werror -Wnon-virtual-dtor -Wold-style-cast -Wsign-compare -Wmissing-field-initializers)
+list(APPEND PROJECT_CXX_FLAGS ${PROJECT_CXX_FLAGS_DEBUG})
 if(OPTIMIZE_FOR_NATIVE)
     include(CheckCXXCompilerFlag)
     CHECK_CXX_COMPILER_FLAG("-march=native" COMPILER_SUPPORTS_MARCH_NATIVE)
     if(COMPILER_SUPPORTS_MARCH_NATIVE)
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
+        list(APPEND PROJECT_CXX_FLAGS -march=native)
     endif()
 endif()
+
+add_compile_options(${PROJECT_CXX_FLAGS})
+####################### Project Level CXX flags ################### }}}
 
 ######################## End compiler configurations #################### }}}
 
@@ -111,7 +75,6 @@ include_directories(SYSTEM "${Boost_INCLUDE_DIR}")
 include_directories("${CMAKE_SOURCE_DIR}")  # Include the core headers via "src".
 
 add_subdirectory(src)
-
 
 # Configure a header file to pass some of the CMake settings to the source code
 configure_file (
