--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -1,6 +1,5 @@
-file(GLOB_RECURSE UTILS_LIB_SOURCES ${PROJECT_SOURCE_DIR}/src/utils/*.cpp)
-file(GLOB_RECURSE UTILS_LIB_HEADERS ${PROJECT_SOURCE_DIR}/src/utils/*.h)
+set(UTILS_LIB_SOURCES BoundsCheck.h CommandLine.h)
 
 # Create utils
-add_library(utils STATIC ${UTILS_LIB_SOURCES} ${UTILS_LIB_HEADERS})
+add_library(utils STATIC ${UTILS_LIB_SOURCES})
 set_target_properties(utils PROPERTIES LINKER_LANGUAGE CXX)
