--- a/src/labs/inlab1/CMakeLists.txt
+++ b/src/labs/inlab1/CMakeLists.txt
@@ -3,3 +3,11 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(SRC inlab1.cpp Compute.h CheckBounds.h ../../utils/CommandLine.h)
 add_executable(inlab1 ${SRC})
 target_link_libraries(inlab1 utils ${Boost_PROGRAM_OPTIONS_LIBRARY})
+
+if(BUILD_PERFORMANCE_BENCHMARKS)
+    add_subdirectory(benchmarks)
+endif()
+
+if(BUILD_TESTS)
+    add_subdirectory(tests)
+endif()
