finished initial implementation

--- a/src/labs/inlab1/CMakeLists.txt
+++ b/src/labs/inlab1/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-set(SRC inlab1.cpp Compute.h CheckBounds.h ../../utils/CommandLine.h)
+set(SRC inlab1.cpp ProcessInputs.h Compute.h CheckBounds.h ../../utils/CommandLine.h)
 add_executable(inlab1 ${SRC})
 target_link_libraries(inlab1 utils ${Boost_PROGRAM_OPTIONS_LIBRARY})
 
