--- a/src/labs/outlab1/CMakeLists.txt
+++ b/src/labs/outlab1/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-set(SRC outlab1.cpp Compute.h ../../utils/CommandLine.h)
+set(SRC outlab1.cpp ProcessInputs.h Compute.h ../../utils/CommandLine.h)
 add_executable(outlab1 ${SRC})
 target_link_libraries(outlab1 utils ${Boost_PROGRAM_OPTIONS_LIBRARY})
 
