fixed C++20 -> C++17 issues. added documentation

--- a/src/labs/inlab2/CMakeLists.txt
+++ b/src/labs/inlab2/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(SRC inlab2.cpp ProcessInputs.h Compute.h ../../utils/CommandLine.h extern/function.h)
 
 add_executable(inlab2 ${SRC})
-target_link_libraries(inlab2 inlab2_extern utils ${Boost_PROGRAM_OPTIONS_LIBRARY})
+target_link_libraries(inlab2 inlab2_extern utils stdc++fs ${Boost_PROGRAM_OPTIONS_LIBRARY})
 
 if(BUILD_PERFORMANCE_BENCHMARKS)
     add_subdirectory(benchmarks)
