--- a/src/labs/inlab2/CMakeLists.txt
+++ b/src/labs/inlab2/CMakeLists.txt
@@ -2,10 +2,14 @@ add_library(inlab2_extern INTERFACE extern/function.h)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-set(SRC inlab2.cpp ProcessInputs.h Compute.h ../../utils/CommandLine.h extern/function.h)
+set(LIB_SRC inlab2.h Compute.h ../../utils/CommandLine.h extern/function.h)
+add_library(lib_inlab2 ${LIB_SRC})
+set_target_properties(lib_inlab2 PROPERTIES LINKER_LANGUAGE CXX)
+set(LINK_LIBS inlab2_extern utils stdc++fs ${Boost_PROGRAM_OPTIONS_LIBRARY})
+target_link_libraries(lib_inlab2 ${LINK_LIBS})
 
-add_executable(inlab2 ${SRC})
-target_link_libraries(inlab2 inlab2_extern utils stdc++fs ${Boost_PROGRAM_OPTIONS_LIBRARY})
+add_executable(inlab2 main.cpp ${LIB_SRC})
+target_link_libraries(inlab2 lib_inlab2)
 
 if(BUILD_PERFORMANCE_BENCHMARKS)
     add_subdirectory(benchmarks)
