--- a/src/labs/inlab2/CMakeLists.txt
+++ b/src/labs/inlab2/CMakeLists.txt
@@ -2,7 +2,16 @@ add_library(inlab2_extern INTERFACE extern/function.h)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-set(LIB_SRC inlab2.h Compute.h ../../utils/CommandLine.h extern/function.h)
+set(LIB_SRC inlab2.h
+            Compute.h
+            ../../utils/CommandLine.h
+            CommandLineParser.h
+            ../../utils/CheckBounds.h
+            ../../utils/Helpers.h
+            ../../utils/Project.h
+            extern/function.h
+)
+
 add_library(lib_inlab2 ${LIB_SRC})
 set_target_properties(lib_inlab2 PROPERTIES LINKER_LANGUAGE CXX)
 set(LINK_LIBS inlab2_extern utils stdc++fs ${Boost_PROGRAM_OPTIONS_LIBRARY})
