--- a/src/labs/CMakeLists.txt
+++ b/src/labs/CMakeLists.txt
@@ -1,5 +1,8 @@
 
 add_subdirectory(inlab1)
 add_subdirectory(outlab1)
+
 add_subdirectory(inlab2)
 add_subdirectory(outlab2)
+
+add_subdirectory(inlab3)
