--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -1,19 +1,25 @@
-set(UTILS_LIB_SOURCES
+set(UTILS_LIB_HEADERS
         CheckBounds.h
-        Stopwatch.h
-        Helpers.h
         CommandLine.h
+        FileParser.h
+        Helpers.h
+        json.hpp
         Profiler.h
         Project.h
-        FileParser.h
-        json.hpp
+        Stopwatch.h
         math/RootFinder.h
-        math/blas/Matrix.h
-        math/blas/Vector.h
         math/blas/MyBLAS.h
+        math/blas/Vector.h
+        math/blas/Matrix.h
         math/blas/LU.h
 )
 
-# Create utils
-add_library(utils STATIC ${UTILS_LIB_SOURCES})
-set_target_properties(utils PROPERTIES LINKER_LANGUAGE CXX)
+set(UTILS_LIB_SOURCES
+        utils_stub.cpp
+)
+
+if(NOT TARGET utils)
+    # Create utils
+    add_library(utils STATIC ${UTILS_LIB_SOURCES} ${UTILS_LIB_HEADERS})
+    target_include_directories(utils PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+endif ()
