--- a/src/labs/inlab4/CMakeLists.txt
+++ b/src/labs/inlab4/CMakeLists.txt
@@ -1,21 +1,16 @@
+add_subdirectory(../../utils utils)
 add_subdirectory(examples)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 set(LIB_SRC inlab4.h
-            Compute.h
-            Parser.h
-            InputsOutputs.h
-            ../../utils/CommandLine.h
-            ../../utils/CheckBounds.h
-            ../../utils/Helpers.h
-            ../../utils/Project.h
+        Compute.h
+        Parser.h
+        InputsOutputs.h
 )
 
-add_library(lib_inlab4 ${LIB_SRC})
-set_target_properties(lib_inlab4 PROPERTIES LINKER_LANGUAGE CXX)
 set(LINK_LIBS utils stdc++fs ${Boost_PROGRAM_OPTIONS_LIBRARY})
-target_link_libraries(lib_inlab4 ${LINK_LIBS})
 
 add_executable(inlab4 main.cpp ${LIB_SRC})
-target_link_libraries(inlab4 lib_inlab4)
+target_include_directories(inlab4 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(inlab4 ${LINK_LIBS})
