--- a/src/labs/outlab1/CMakeLists.txt
+++ b/src/labs/outlab1/CMakeLists.txt
@@ -1,24 +1,14 @@
+add_subdirectory(../../utils utils)
+
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 set(LIB_SRC outlab1.h
-            Compute.h
-            Parser.h
-            ../../utils/CommandLine.h
-            ../../utils/CheckBounds.h
-            ../../utils/Helpers.h
-            ../../utils/Project.h
+        Compute.h
+        Parser.h
 )
-add_library(lib_outlab1 ${LIB_SRC})
-set_target_properties(lib_outlab1 PROPERTIES LINKER_LANGUAGE CXX)
-target_link_libraries(lib_outlab1 utils ${Boost_PROGRAM_OPTIONS_LIBRARY})
+
+set(LINK_LIBS utils stdc++fs ${Boost_PROGRAM_OPTIONS_LIBRARY})
 
 add_executable(outlab1 main.cpp ${LIB_SRC})
-target_link_libraries(outlab1 lib_outlab1)
-
-if(BUILD_PERFORMANCE_BENCHMARKS)
-    add_subdirectory(benchmarks)
-endif()
-
-if(BUILD_TESTS)
-    add_subdirectory(tests)
-endif()
+target_include_directories(outlab1 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(outlab1 ${LINK_LIBS})
