--- a/src/labs/outlab5/CMakeLists.txt
+++ b/src/labs/outlab5/CMakeLists.txt
@@ -3,7 +3,7 @@ add_subdirectory(examples)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-set(LIB_SRC inlab5.h
+set(LIB_SRC outlab5.h
         Compute.h
         Parser.h
         InputsOutputs.h
@@ -11,6 +11,6 @@ set(LIB_SRC inlab5.h
 
 set(LINK_LIBS utils stdc++fs ${Boost_PROGRAM_OPTIONS_LIBRARY})
 
-add_executable(inlab5 main.cpp ${LIB_SRC})
-target_include_directories(inlab5 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(inlab5 ${LINK_LIBS})
+add_executable(outlab5 main.cpp ${LIB_SRC})
+target_include_directories(outlab5 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(outlab5 ${LINK_LIBS})
