--- a/src/project/project1/CMakeLists.txt
+++ b/src/project/project1/CMakeLists.txt
@@ -24,3 +24,7 @@ target_link_libraries(project1_lib ${LINK_LIBS})
 # Modify the project1 executable target to link with project1_lib
 add_executable(project1 main.cpp)
 target_link_libraries(project1 project1_lib)
+
+
+file(GLOB FILES "analysis" "examples")
+file(COPY ${FILES} DESTINATION ${CMAKE_BINARY_DIR}/)
