--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
 
 ####################### Options ################### {{{
 option(BUILD_TESTS "Build the tests" ON)  # Influences CTest.
-option(CODE_COVERAGE "Perform code coverage analysis" ON)
+option(CODE_COVERAGE "Perform code coverage analysis" OFF)
 option(PORTABLE "Build without CPU specific optimizations" OFF)
 option(BUILD_PERFORMANCE_BENCHMARKS "Build performance benchmarks" OFF)
 ####################### Options ##################### }}}
@@ -60,17 +60,6 @@ function(CHECK_COMPILER_FLAG_SUPPORT FLAG SUPPORT_VAR FLAGS_VAR)
         set(${FLAGS_VAR} "${${FLAGS_VAR}};${FLAG}" PARENT_SCOPE)
     endif ()
 endfunction()
-
-CHECK_COMPILER_FLAG_SUPPORT("-msse4.2" COMPILER_SUPPORTS_SSE4_2 PROJECT_CXX_NON_PORTABLE_FLAGS)
-CHECK_COMPILER_FLAG_SUPPORT("-mavx" COMPILER_SUPPORTS_MAVX PROJECT_CXX_NON_PORTABLE_FLAGS)
-CHECK_COMPILER_FLAG_SUPPORT("-mavx2" COMPILER_SUPPORTS_MAVX2 PROJECT_CXX_NON_PORTABLE_FLAGS)
-#CHECK_COMPILER_FLAG_SUPPORT("-funroll-loops" COMPILER_SUPPORTS_LOOP_UNROLLING PROJECT_CXX_NON_PORTABLE_FLAGS)
-#CHECK_COMPILER_FLAG_SUPPORT("-funroll-all-loops" COMPILER_SUPPORTS_LOOP_UNROLLING_ALL PROJECT_CXX_NON_PORTABLE_FLAGS)
-CHECK_COMPILER_FLAG_SUPPORT("-mfma" COMPILER_SUPPORTS_FMA PROJECT_CXX_NON_PORTABLE_FLAGS)
-#CHECK_COMPILER_FLAG_SUPPORT("-mavx512f" COMPILER_SUPPORTS_MAVX512F PROJECT_CXX_NON_PORTABLE_FLAGS)
-#CHECK_COMPILER_FLAG_SUPPORT("-mavx512cd" COMPILER_SUPPORTS_MAVX512CD PROJECT_CXX_NON_PORTABLE_FLAGS)
-#CHECK_COMPILER_FLAG_SUPPORT("-mavx512er" COMPILER_SUPPORTS_MAVX512ER PROJECT_CXX_NON_PORTABLE_FLAGS)
-#CHECK_COMPILER_FLAG_SUPPORT("-mavx512pf" COMPILER_SUPPORTS_MAVX512PF PROJECT_CXX_NON_PORTABLE_FLAGS)
 CHECK_COMPILER_FLAG_SUPPORT("-march=native" COMPILER_SUPPORTS_MARCH_NATIVE PROJECT_CXX_NON_PORTABLE_FLAGS)
 if (NOT PORTABLE)
     list(APPEND PROJECT_CXX_FLAGS ${PROJECT_CXX_NON_PORTABLE_FLAGS})
