LazyMatrix-Vector tests looking good

--- a/src/utils/math/blas/tests/CMakeLists.txt
+++ b/src/utils/math/blas/tests/CMakeLists.txt
@@ -6,6 +6,7 @@ set(TEST_SOURCES
         expression/VectorExpressionTests.cpp
         matrix/BaseMatrixTests.cpp
         matrix/MatrixPerformanceTests.cpp
+        vector/BaseVectorTests.cpp
 )
 
 if (NOT TARGET blas_tests)
