--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,7 @@ add_definitions(-DPROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR}")  # Needed to print
 
 ####################### Project Level CXX flags ################### {{{
 ## Floating point options https://gcc.gnu.org/wiki/FloatingPointMath
-#set(PROJECT_CXX_FLAGS -frounding-math -fsignaling-nans)
+#set(PROJECT_CXX_FLAGS -ffast-math)
 set(PROJECT_CXX_FLAGS_DEBUG -Wall -Wextra -Werror -Wsign-compare -Wmissing-field-initializers -Wnon-virtual-dtor -Wno-old-style-cast -Wno-cast-function-type -Wno-unused-parameter -Wno-unused-function)
 list(APPEND PROJECT_CXX_FLAGS ${PROJECT_CXX_FLAGS_DEBUG})
 set(PROJECT_CXX_LINK_FLAGS)
