initial boilerplate builds

--- a/src/labs/CMakeLists.txt
+++ b/src/labs/CMakeLists.txt
@@ -17,4 +17,5 @@ add_subdirectory(outlab5)
 add_subdirectory(inlab6)
 add_subdirectory(outlab6)
 
-#add_subdirectory(inlab7)
+add_subdirectory(inlab7)
+add_subdirectory(outlab7)
